--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,3 +13,100 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./back-link.css');
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1128px;
+}
+
+.gallery-item {
+  flex-basis: calc((100% - 48px) / 3);
+}
+
+.gallery-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+  }
+  
+  .gallery-image:hover {
+    transform: scale(1.045);
+  }
+  
+
+  /* form */
+  
+  .feedback-form {
+    max-width: 360px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    font-family: "Montserrat", sans-serif;
+}
+
+.form-label {
+    margin:0%;
+    font-weight: 500;
+    color:#2e2f42;
+    display: block;
+    text-align: left;
+    letter-spacing: 0.04em;
+}
+
+
+.feedback-form input,
+.feedback-form textarea {
+    margin-bottom: 8px;
+    margin-top: 8px;
+    width: 100%;
+    border: 1px solid #808080;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+
+.feedback-form textarea {
+    resize: none;
+    height: 80px;
+}
+
+
+.feedback-form input:hover,
+.feedback-form textarea:hover {
+border: 1px solid #000;
+}
+
+
+.feedback-form input:focus,
+.feedback-form textarea:focus {
+    border: 1px solid #808080;
+    outline: none;
+}
+
+
+.feedback-form button {
+    width: 95px;
+    height: 40px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    padding-block: 8px;
+    padding-inline: 16px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.feedback-form button:hover {
+    background-color: #6c8cff;
+}
